package at.spg.projectkiesslinghossain.domain;

public enum PropertyType {
    HOUSE,
    APARTMENT,
    COMMERCIAL,
    NO_DESC
}
