package at.spg.projectkiesslinghossain.service;

import at.spg.projectkiesslinghossain.domain.Listing;

public class ListingManager {
    private boolean createListing(Listing listing){
        return false;
    }

    private boolean editListing(Listing listing){
        return false;
    }

    private boolean deactivateListing(Listing listing){
        return false;
    }
}
