package at.spg.projectkiesslinghossain.service;

import at.spg.projectkiesslinghossain.domain.Listing;

public class SearchManager {
    private Listing[] searchByListing(){
        Listing[] ListingArray = new Listing[0];
        return ListingArray;
}
}
